Corrections on the file. SORRY for misunderstanding the exercise. I added the table of contents list, wrapped, linked and all other scrolls to top.

--- a/style.CSS
+++ b/style.CSS
@@ -1,24 +1,29 @@
 /* Style */
-#Bold-Pink {
+#title {
     color: pink;
     font-weight: bold;
 }
+
 
 .CAPS-Grey {
     color: grey;
     text-transform: uppercase;
 }
+
 .Capitalize-Blue {
     color: indigo;
     text-transform: capitalize;
 }
+
 .heading-bg-color {
     background-color: teal;
 }
+
 .lowercase-heading-yellow {
     color: yellow;
     text-transform: lowercase;
 }
+
 .roman-numbers-list {
     list-style: lower-roman;
 }
